fix hero bg img on mobile version

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -112,4 +112,7 @@
     line-height: 10vw;
     width: 95%;
   }
+  .hero_bg {
+    background-attachment: initial;
+  }
 }
